Fixed bug on firefox

--- a/studionilo_website/home/static/home/css/nilo.css
+++ b/studionilo_website/home/static/home/css/nilo.css
@@ -83,23 +83,36 @@ body {
 
 .nilo-nav-item>div {
     cursor: pointer;
-}
-
-.nilo-nav-item:hover {
+    margin-right: 2em;
     transition-property: all;
     transition-duration: 0.3s;
     transition-timing-function: ease-in-out;
 }
 
-.nilo-nav-item svg {
-    fill: inherit;
-    opacity: 0%;
-    height: 0.5em;
-    display: none;
+.nilo-nav-item>div:hover {
+    color: gray;
+    transition-property: all;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-in-out;
+}
+.nilo-nav-item>div:hover svg {
+    color: gray;
+    opacity: 1;
+    animation-name: fade-in-right;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+    /* transition-property: all;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-in-out; */
 }
 
-.nilo-nav-item>div {
-    margin-right: 2em;
+.nilo-nav-item>div svg {
+    fill: gray;
+    opacity: 0;
+    height: 0.5em;
+    /* transition-property: all;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-in-out; */
 }
 
 .nilo-more-services {
@@ -129,13 +142,13 @@ body {
     }
 }
 
-.nilo-nav-item:hover svg {
+/* .nilo-nav-item:hover svg {
     opacity: 100%;
     fill: inherit;
     animation-name: fade-in-right;
     animation-duration: 0.6s;
     animation-fill-mode: forwards;
-}
+} */
 
 .nilo-jumbo-container {
     width: 100%;
@@ -145,6 +158,7 @@ body {
     align-items: center;
     justify-content: center;
     padding: 1%;
+    position: relative;
 }
 
 .nilo-container {
